Fix: Mobile navigation visibility

--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,7 @@
     
     [mobile-nav] {
       
+      visibility: hidden;
       
       height: 100vh;
       height: 100dvh;
